Update form design and debugging

--- a/src/app/post/create/create.component.html
+++ b/src/app/post/create/create.component.html
@@ -23,7 +23,7 @@
             </div>
         </div>
 
-        <button class="btn btn-primary" type="submit" [disabled]="!form.valid"></button>
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Create</button>
 
     </form>
 </div>
