--- a/src/app/post/view/view.component.html
+++ b/src/app/post/view/view.component.html
@@ -1,1 +1,19 @@
-<p>view works!</p>
+<div class="container">
+    <h1 class="text-center">View Post</h1>
+    <a href="#" class="" routerLink="/post/index/" class="btn btn-warning">Back</a>
+
+    <div class="">
+        <strong>ID:</strong>
+        <p>{{ post.id}}</p>
+    </div>
+
+    <div class="">
+        <strong>Title:</strong>
+        <p>{{ post.title}}</p>
+    </div>
+
+    <div class="">
+        <strong>Body:</strong>
+        <p>{{ post.body}}</p>
+    </div>
+</div>
